Tron and Random Access Memory section

--- a/index.html
+++ b/index.html
@@ -132,6 +132,34 @@
             </li>
         </ul>
     </section>
-    <!-- Tron -->
+
+    <section class="history">
+        <div class="container">
+            <h3>Tron: Legacy</h3>
+            <div class="tron">
+                <div class="tron-text">
+                    <p>At the 2009 San Diego Comic-Con, it was announced that the duo composed 24 tracks for the film Tron: Legacy. The members of Daft Punk also make a cameo appearance as disc jockey programs wearing their trademark robot helmets within the film's virtual world. The soundtrack album of the film was released on 6 December 2010. <br>
+
+                    In 2010, Daft Punk were admitted into the Ordre des Arts et des Lettres, an order of merit of France. Bangalter and Homem-Christo were individually awarded the rank of Chevalier (knight).</p>
+                </div>
+                <div class="tron-img">
+                    <img src="img/tron_img.jpg" alt="Daft Punk in the movie Tron" class="pic">
+                </div>
+            </div>
+        </div>
+
+        <h3>Random Acess Memory</h3>
+        <div class="ram">
+            <div class="ram-text">
+                <p>Daft Punk worked on their fourth studio album. Unlike their previous albums, Daft Punk recruited session musicians to perform live instrumentation and limited the use of electronic instruments to drum machines, a custom-built modular synthesizer, and vintage vocoders. The album features collaborations with Giorgio Moroder, Panda Bear, Julian Casablancas, Todd Edwards, DJ Falcon, Chilly Gonzales, Nile Rodgers, Paul Williams and Pharrell Williams A gradual promotional rollout was later launched featuring billboards and television spots, leading to the reveal of the album title and the release date of 21 May 2013.</p>
+                <p>
+                It is one of Daft Punk's most commercially successful albums, topping the charts in more than 25 countries worldwide. It was their first album to top the United States Billboard 200 chart, selling more than 339,000 copies within its first week. The lead single "Get Lucky" was a critical and commercial success, topping the charts in more than 30 countries and becoming one of the best-selling digital singles of all time. At the 56th Annual Grammy Awards in 2014, the album won Grammy Awards for Album of the Year, Best Dance/Electronica Album and Best Engineered Album, Non-Classical, and "Get Lucky" won for Record of the Year and Best Pop Duo/Group Performance.
+                </p>
+            </div>
+            <div class="ram-img">
+                <img src="img/ram_img.jpg" alt="Random Access Memory cover" class="pic">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
