Added the footer

--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:500|Passion+One:700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <base target="_blank">
+
     <title>Daft Punk</title>
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <a href="#">
+                <a href="index.html" target="_self">
                     <img src="img/logo.png" alt="Daft Punk logo">
                 </a>
             </div>
@@ -161,5 +165,27 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="social-links">
+                <div>
+                    <a href="https://www.instagram.com/daftpunk/"><i class="fab fa-instagram" ></i></a>
+
+                    <a href="https://www.facebook.com/daftpunk/?ref=br_rs"><i class="fab fa-facebook-square"></i></a>
+
+                    <a href="https://www.youtube.com/user/daftpunkalive/videos"><i class="fab fa-youtube"></i></a>
+                </div>
+                <div>
+                    <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i class="fab fa-spotify"></i></a>    
+
+                    <a href="https://itunes.apple.com/ca/artist/daft-punk/5468295"><i class="fab fa-itunes"></i></a>
+
+                    <a href="https://daftpunk.com/">Official Merchandise</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <p class="coder">Hand coded with &hearts; by Juan Daniel</p>
 </body>
 </html>
