--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:500|Passion+One:700" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
 
     <meta charset="UTF-8">
@@ -32,7 +33,7 @@
 
     <div class="container">
         <div class="container">
-            <h1>Daft Punk</h1>
+            <h1 class="js--header">Daft Punk</h1>
         </div>
         <section class="intro">
             <div class="intro-text">
@@ -46,10 +47,10 @@
 
     <div class="container">
         <div class="container">
-            <h2>History</h2>
+            <h2 class="js--header-2">History</h2>
         </div>
         <section class="history">
-            <p class="history-text">Guy-Manuel de Homem-Christo and Thomas Bangalter met in 1987 while attending the Lycée Carnot, a secondary school in Paris. The two became friends and later recorded demo tracks with others from the school. This eventually led to the formation of a guitar-based group called Darlin' with Laurent Brancowitz in 1992. Bangalter and Homem-Christo played bass and guitar, respectively, while Brancowitz was brought on board after the two sought an additional guitarist. A negative review in Melody Maker by Dave Jennings subsequently dubbed the music "a daft punky thrash." Instead of dismissing the review, they found it amusing. Darlin' soon disbanded, leaving Brancowitz to pursue other efforts with Phoenix. Bangalter and Homem-Christo formed Daft Punk and experimented with drum machines and synthesisers.</p>
+            <p class="history-text js--text-1">Guy-Manuel de Homem-Christo and Thomas Bangalter met in 1987 while attending the Lycée Carnot, a secondary school in Paris. The two became friends and later recorded demo tracks with others from the school. This eventually led to the formation of a guitar-based group called Darlin' with Laurent Brancowitz in 1992. Bangalter and Homem-Christo played bass and guitar, respectively, while Brancowitz was brought on board after the two sought an additional guitarist. A negative review in Melody Maker by Dave Jennings subsequently dubbed the music "a daft punky thrash." Instead of dismissing the review, they found it amusing. Darlin' soon disbanded, leaving Brancowitz to pursue other efforts with Phoenix. Bangalter and Homem-Christo formed Daft Punk and experimented with drum machines and synthesisers.</p>
 
             <div class="young-container">
                 <div class="young-img">
@@ -74,22 +75,22 @@
                     <p>The most successful single from Homework was "Around the World", which is known for the repeating chant of the song's title.</p>
                 </div>
                 <div class="homework-img">
-                    <img src="img/homework_img.jpg" alt="Daft Punk unmasked in Muzik magazine cover" class="pic">
+                    <img src="img/homework_img.jpg" alt="Daft Punk unmasked in Muzik magazine cover" class="pic js--pic-1">
                 </div>
             </div>
 
             
             <div class="discovery">
                 <h3>Discovery</h3>
-                <div class="discovery-text">
+                <div class="discovery-text js--text-2">
                     <p>By 1999, the duo was well into the recording sessions for its second album, which had begun a year earlier. The 2001 release of Discovery took on a slicker and distinctly synthpop-oriented style, initially stunning fans of Daft Punk's previous material in Homework. The group states that the album was conceived as an attempt to reconnect with a playful, open-minded attitude associated with the discovery phase of childhood. This accounts for the heavy use of themes and samples from the late '70s to early '80s era on the album. The album reached No. 2 in the United Kingdom, and its single, "One More Time", was a major club and mainstream hit that nearly topped the UK Singles Chart. The song is well known for being heavily autotuned and compressed. The song and album created a new generation of fans mainly familiar with the second Daft Punk release. The singles "Digital Love" and "Harder, Better, Faster, Stronger" were also very successful in the UK and on the United States dance chart. "Digital Love" was subsequently covered by the bands Kodaline and Hellogoodbye. The song "Face to Face" hit No. 1 on the USA club play charts. A 45-minute excerpt from a Daftendirektour performance recorded at Birmingham, UK in 1997 was also released in 2001, titled Alive 1997. The year 2003 saw the release of the feature-length animated film, Interstella 5555: The 5tory of the 5ecret 5tar 5ystem. Daft Punk produced the film under the supervision of Leiji Matsumoto, who is their childhood hero. The album Daft Club was also released to promote the film. It features a collection of remixes previously made available through an online membership service of the same name.</p>
                 </div>
 
                 <div class="discovery-images">
-                    <div class="discovery-img">
+                    <div class="discovery-img js--pic-2">
                         <img src="img/discovery-img.jpg" alt="Daft punk with their helmets" class="pic">
                     </div>
-                    <div class="interstella-img">
+                    <div class="interstella-img js--pic-3">
                             <img src="img/interstella_img.jpg" alt="Interstella 5555" class="pic">
                             <p>Interstella 5555</p>
                     </div>
@@ -103,7 +104,7 @@
 
                     <p>The Alive 2006/2007 tour began with a sole United States performance at the Coachella Festival in Indio, California in April 2006. Daft Punk released its second live album titled Alive 2007 on 19 November 2007. It contains the duo's performance in Paris from the Alive 2007 tour. The live version of "Harder, Better, Faster, Stronger" from Alive 2007 was released as a single.</p>
                 </div>
-                <div class="human-after-all-img">
+                <div class="human-after-all-img js--pic-4">
                     <img src="img/human-after-all-img.jpg" alt="Human After All era Daft Punk" class="pic">
                 </div>
             </div>
@@ -116,22 +117,22 @@
         <ul class="alive-showcase">
             <li>
                 <figure class="alive-photo">
-                    <img src="img/alive_1.jpg" alt="">
+                    <img src="img/alive_1.jpg" alt="" class="js--pic-5">
                 </figure>
             </li>
             <li>
                 <figure class="alive-photo">
-                    <img src="img/alive_2.jpg" alt="">
+                    <img src="img/alive_2.jpg" alt="" class="js--pic-6">
                 </figure>
             </li>
             <li>
                 <figure class="alive-photo">
-                    <img src="img/alive_3.jpg" alt="">
+                    <img src="img/alive_3.jpg" alt="" class="js--pic-7">
                 </figure>
             </li>
             <li>
                 <figure class="alive-photo">
-                    <img src="img/alive_4.jpg" alt="">
+                    <img src="img/alive_4.jpg" alt="" class="js--pic-8">
                 </figure>
             </li>
         </ul>
@@ -187,5 +188,13 @@
         </div>
     </footer>
     <p class="coder">Hand coded with &hearts; by Juan Daniel</p>
+
+    <script
+     src="http://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous">
+    </script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
