--- a/index.html
+++ b/index.html
@@ -116,23 +116,23 @@
 
         <ul class="alive-showcase">
             <li>
-                <figure class="alive-photo">
-                    <img src="img/alive_1.jpg" alt="" class="js--pic-5">
+                <figure class="alive-photo js--pic-5">
+                    <img src="img/alive_1.jpg" alt="">
                 </figure>
             </li>
             <li>
-                <figure class="alive-photo">
-                    <img src="img/alive_2.jpg" alt="" class="js--pic-6">
+                <figure class="alive-photo js--pic-6">
+                    <img src="img/alive_2.jpg" alt="">
                 </figure>
             </li>
             <li>
-                <figure class="alive-photo">
-                    <img src="img/alive_3.jpg" alt="" class="js--pic-7">
+                <figure class="alive-photo js--pic-7">
+                    <img src="img/alive_3.jpg" alt="">
                 </figure>
             </li>
             <li>
-                <figure class="alive-photo">
-                    <img src="img/alive_4.jpg" alt="" class="js--pic-8">
+                <figure class="alive-photo js--pic-8">
+                    <img src="img/alive_4.jpg" alt="">
                 </figure>
             </li>
         </ul>
@@ -162,7 +162,7 @@
                 </p>
             </div>
             <div class="ram-img">
-                <img src="img/ram_img.jpg" alt="Random Access Memory cover" class="pic">
+                <img src="img/ram_img.jpg" alt="Random Access Memory cover" class="pic js--pic-9">
             </div>
         </div>
     </section>
