Made it responsive

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:500|Passion+One:700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/queries.css">
 
 
     <meta charset="UTF-8">
@@ -153,7 +154,7 @@
             </div>
         </div>
 
-        <h3>Random Acess Memory</h3>
+        <h3 class="ram-heading">Random Acess Memory</h3>
         <div class="ram">
             <div class="ram-text">
                 <p>Daft Punk worked on their fourth studio album. Unlike their previous albums, Daft Punk recruited session musicians to perform live instrumentation and limited the use of electronic instruments to drum machines, a custom-built modular synthesizer, and vintage vocoders. The album features collaborations with Giorgio Moroder, Panda Bear, Julian Casablancas, Todd Edwards, DJ Falcon, Chilly Gonzales, Nile Rodgers, Paul Williams and Pharrell Williams A gradual promotional rollout was later launched featuring billboards and television spots, leading to the reveal of the album title and the release date of 21 May 2013.</p>
