added favicon and navbar

--- a/index.html
+++ b/index.html
@@ -16,20 +16,34 @@
     <base target="_blank">
 
     <title>Daft Punk</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="msapplication-config" content="/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container" id="nav">
             <div class="logo">
                 <a href="index.html" target="_self">
                     <img src="img/logo.png" alt="Daft Punk logo">
                 </a>
             </div>
+            <nav>
+                <ul>
+                    <li><a href="#" target="_self">About</a></li>
+                    <li><a href="#" target="_self">History</a></li>
+                </ul>
+            </nav>
         </div>
 
-        <!-- <div class="hero-text-box">
-            <h1>A fan page about the <br>legendary duo</h1>
-        </div> -->
     </header>
 
     <div class="container">
